--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,13 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
         
+      - run:
+          name: Install Codecov
+          command: yarn add --dev codecov
+
       # run tests!
-      - run: yarn test
+      - run:
+          name: Run test
+          command: yarn test:coverage
 
 
