--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "<wuttinan.wch@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test": "jest --config ./jest.config.js"
+    "test": "jest --config ./jest.config.js",
+    "test:coverage": "jest --config ./jest.config.js --coverage"
   },
   "devDependencies": {
     "jest": "^23.6.0"
