--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,5 +41,10 @@ jobs:
       - run:
           name: Run test
           command: yarn test:coverage
+      
+      # Codecov
+      - run
+          name: pload coverage results to Codecov
+          command: node ./node_modules/.bin/codecov
 
 
