--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,4 +47,10 @@ jobs:
           name: Upload coverage results to Codecov
           command: node ./node_modules/.bin/codecov
 
+experimental:
+  notify:
+    branches:
+      only:
+        - master
+        - developer
 
