--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
 
     working_directory: ~/repo
     environment:
-      TZ: "/usr/share/zoneinfo/Asia/Bangkok"
+      TZ: "Asia/Bangkok"
 
     steps:
       - checkout
