--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
           command: yarn test:coverage
 
       - store_test_results:
-          path: coverage
+          path: test-results/jest
       
       # Codecov
       - run:
