--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
     "test:coverage": "jest --config ./jest.config.js --coverage"
   },
   "devDependencies": {
-    "jest": "^23.6.0"
+    "jest": "^23.6.0",
+    "jest-junit": "^5.2.0"
   },
   "dependencies": {
     "path": "^0.12.7"
+  },
+  "jest-junit": {
+    "suiteName": "jest tests",
+    "outputDirectory": "./test-results/jest/",
+    "outputName": "./junit.xml",
+    "classNameTemplate": "{classname}-{title}",
+    "titleTemplate": "{classname}-{title}",
+    "ancestorSeparator": " › ",
+    "usePathForSuiteName": "true"
   }
 }
