--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "jest-junit": {
     "suiteName": "jest tests",
     "outputDirectory": "./test-results/jest/",
-    "outputName": "./junit.xml",
+    "outputName": "./results.xml",
     "classNameTemplate": "{classname}-{title}",
     "titleTemplate": "{classname}-{title}",
     "ancestorSeparator": " › ",
