update jest test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,13 +41,8 @@ jobs:
 
       # run tests!
       - run:
-          name: Run test
-          command: yarn test:coverage
-
-      - run:
-          name: "JavaScript Test Suite"
-          # yarn here makes sure we are using the local jest binary
-          command: yarn jest -- --ci --testResultsProcessor="jest-junit"
+          name: Run tests
+          command: yarn test:all
 
       - store_test_results:
           path: test-results/jest
