--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "test": "jest --config ./jest.config.js",
-    "test:coverage": "jest --config ./jest.config.js --coverage"
+    "test:coverage": "jest --config ./jest.config.js --coverage",
+    "test:all": "jest --config ./jest.config.js --coverage --ci --reporters=default --reporters=jest-junit"
   },
   "devDependencies": {
     "jest": "^23.6.0",
